# horizon-core

./: .clang-format  .clang-tidy  .gitignore  CODINGSTYLE.md  Changelog.txt  Doxyfile.in  NOTICE  README.md  debug_config.sh  meson.build  release_config.sh
include/horizon/: Concepts.hpp  Core.hpp  EntryPoint.hpp  Error.hpp  Memory.hpp  RuntimeError.hpp  String.hpp  Terminal.hpp  meson.build
src/: Error.cpp  Terminal.cpp  meson.build
src/win32/: VirtualConsole.cpp
subprojects/: cpputest.wrap
tests/: EscapeCodes.cpp  TestHorizonCore.cpp  TestMacros.cpp  TestString.cpp  TestTypes.cpp  meson.build
